syntax = "proto3";
package companies;
import "country.proto";
import "company.proto";
message CompanyInvestLocationMapping {
  optional int32 id = 1;
  optional string createdAt = 2;
  optional string updatedAt = 3;
  optional string createdBy = 4;
  optional string updatedBy = 5;
  optional string state = 6;
  optional int32 companyId = 8;
  optional int32 countryId = 9;
  optional Company company = 10;
  optional Country country = 11;
}
