// Original file: src/proto/proto/company.proto


export interface QueryCompany {
  'id'?: (number);
  'createdAt'?: (string);
  'updatedAt'?: (string);
  'createdBy'?: (string);
  'updatedBy'?: (string);
  'state'?: (string);
  'page'?: (number);
  'limit'?: (number);
  'sortBy'?: (string);
  'sortOrder'?: (string);
  'name'?: (string);
  'secondName'?: (string);
  'hashtag'?: (string);
  'type'?: (string);
  'authorizedCapital'?: (number | string);
  'registerDate'?: (string);
  'deregisterDate'?: (string);
  'description'?: (string);
  'taxNumber'?: (string);
  'contactNumber'?: (string);
  'establishmentDecision'?: (string);
  'responsibleAuthority'?: (string);
  'employeeNumber'?: (number);
  'streetAddress'?: (string);
  'wardId'?: (number);
  'districtId'?: (number);
  'headquarterPlaceId'?: (number);
  'taxPlaceId'?: (number);
  'userId'?: (number);
  'ipoStockId'?: (number);
  'parentId'?: (number);
  'industryId'?: (number);
  'ids'?: (number)[];
  'minRange'?: (number | string);
  'maxRange'?: (number | string);
  'managementPlaceId'?: (number);
  '_id'?: "id";
  '_createdAt'?: "createdAt";
  '_updatedAt'?: "updatedAt";
  '_createdBy'?: "createdBy";
  '_updatedBy'?: "updatedBy";
  '_state'?: "state";
  '_page'?: "page";
  '_limit'?: "limit";
  '_sortBy'?: "sortBy";
  '_sortOrder'?: "sortOrder";
  '_name'?: "name";
  '_secondName'?: "secondName";
  '_hashtag'?: "hashtag";
  '_type'?: "type";
  '_authorizedCapital'?: "authorizedCapital";
  '_registerDate'?: "registerDate";
  '_deregisterDate'?: "deregisterDate";
  '_description'?: "description";
  '_taxNumber'?: "taxNumber";
  '_contactNumber'?: "contactNumber";
  '_establishmentDecision'?: "establishmentDecision";
  '_responsibleAuthority'?: "responsibleAuthority";
  '_employeeNumber'?: "employeeNumber";
  '_streetAddress'?: "streetAddress";
  '_wardId'?: "wardId";
  '_districtId'?: "districtId";
  '_headquarterPlaceId'?: "headquarterPlaceId";
  '_managementPlaceId'?: "managementPlaceId";
  '_taxPlaceId'?: "taxPlaceId";
  '_userId'?: "userId";
  '_ipoStockId'?: "ipoStockId";
  '_parentId'?: "parentId";
  '_industryId'?: "industryId";
  '_minRange'?: "minRange";
  '_maxRange'?: "maxRange";
}

export interface QueryCompany__Output {
  'id'?: (number);
  'createdAt'?: (string);
  'updatedAt'?: (string);
  'createdBy'?: (string);
  'updatedBy'?: (string);
  'state'?: (string);
  'page'?: (number);
  'limit'?: (number);
  'sortBy'?: (string);
  'sortOrder'?: (string);
  'name'?: (string);
  'secondName'?: (string);
  'hashtag'?: (string);
  'type'?: (string);
  'authorizedCapital'?: (number);
  'registerDate'?: (string);
  'deregisterDate'?: (string);
  'description'?: (string);
  'taxNumber'?: (string);
  'contactNumber'?: (string);
  'establishmentDecision'?: (string);
  'responsibleAuthority'?: (string);
  'employeeNumber'?: (number);
  'streetAddress'?: (string);
  'wardId'?: (number);
  'districtId'?: (number);
  'headquarterPlaceId'?: (number);
  'taxPlaceId'?: (number);
  'userId'?: (number);
  'ipoStockId'?: (number);
  'parentId'?: (number);
  'industryId'?: (number);
  'ids': (number)[];
  'minRange'?: (number);
  'maxRange'?: (number);
  'managementPlaceId'?: (number);
  '_id': "id";
  '_createdAt': "createdAt";
  '_updatedAt': "updatedAt";
  '_createdBy': "createdBy";
  '_updatedBy': "updatedBy";
  '_state': "state";
  '_page': "page";
  '_limit': "limit";
  '_sortBy': "sortBy";
  '_sortOrder': "sortOrder";
  '_name': "name";
  '_secondName': "secondName";
  '_hashtag': "hashtag";
  '_type': "type";
  '_authorizedCapital': "authorizedCapital";
  '_registerDate': "registerDate";
  '_deregisterDate': "deregisterDate";
  '_description': "description";
  '_taxNumber': "taxNumber";
  '_contactNumber': "contactNumber";
  '_establishmentDecision': "establishmentDecision";
  '_responsibleAuthority': "responsibleAuthority";
  '_employeeNumber': "employeeNumber";
  '_streetAddress': "streetAddress";
  '_wardId': "wardId";
  '_districtId': "districtId";
  '_headquarterPlaceId': "headquarterPlaceId";
  '_managementPlaceId': "managementPlaceId";
  '_taxPlaceId': "taxPlaceId";
  '_userId': "userId";
  '_ipoStockId': "ipoStockId";
  '_parentId': "parentId";
  '_industryId': "industryId";
  '_minRange': "minRange";
  '_maxRange': "maxRange";
}
