// Original file: src/proto/proto/company.proto

import type { User as _users_User, User__Output as _users_User__Output } from '../users/User';
import type { IpoStock as _ipoStocks_IpoStock, IpoStock__Output as _ipoStocks_IpoStock__Output } from '../ipoStocks/IpoStock';
import type { CompanyIndustryMapping as _companies_CompanyIndustryMapping, CompanyIndustryMapping__Output as _companies_CompanyIndustryMapping__Output } from '../companies/CompanyIndustryMapping';
import type { City as _cities_City, City__Output as _cities_City__Output } from '../cities/City';
import type { Album as _albums_Album, Album__Output as _albums_Album__Output } from '../albums/Album';
import type { Transfer as _transfers_Transfer, Transfer__Output as _transfers_Transfer__Output } from '../transfers/Transfer';
import type { Exit as _exits_Exit, Exit__Output as _exits_Exit__Output } from '../exits/Exit';
import type { FundingRound as _fundingRounds_FundingRound, FundingRound__Output as _fundingRounds_FundingRound__Output } from '../fundingRounds/FundingRound';
import type { CompanyFounderMapping as _companies_CompanyFounderMapping, CompanyFounderMapping__Output as _companies_CompanyFounderMapping__Output } from '../companies/CompanyFounderMapping';
import type { CompanyDirectorMapping as _companies_CompanyDirectorMapping, CompanyDirectorMapping__Output as _companies_CompanyDirectorMapping__Output } from '../companies/CompanyDirectorMapping';
import type { CompanyChiefMapping as _companies_CompanyChiefMapping, CompanyChiefMapping__Output as _companies_CompanyChiefMapping__Output } from '../companies/CompanyChiefMapping';
import type { Experience as _experiences_Experience, Experience__Output as _experiences_Experience__Output } from '../experiences/Experience';
import type { CompanyPeopleMapping as _companies_CompanyPeopleMapping, CompanyPeopleMapping__Output as _companies_CompanyPeopleMapping__Output } from '../companies/CompanyPeopleMapping';
import type { FundingInvestorMapping as _fundingRounds_FundingInvestorMapping, FundingInvestorMapping__Output as _fundingRounds_FundingInvestorMapping__Output } from '../fundingRounds/FundingInvestorMapping';
import type { Service as _services_Service, Service__Output as _services_Service__Output } from '../services/Service';
import type { Product as _products_Product, Product__Output as _products_Product__Output } from '../products/Product';
import type { Merge as _merges_Merge, Merge__Output as _merges_Merge__Output } from '../merges/Merge';
import type { Acquisition as _acquisitions_Acquisition, Acquisition__Output as _acquisitions_Acquisition__Output } from '../acquisitions/Acquisition';
import type { Cooperation as _cooperations_Cooperation, Cooperation__Output as _cooperations_Cooperation__Output } from '../cooperations/Cooperation';
import type { Company as _companies_Company, Company__Output as _companies_Company__Output } from '../companies/Company';
import type { Social as _socials_Social, Social__Output as _socials_Social__Output } from '../socials/Social';
import type { Campaign as _campaigns_Campaign, Campaign__Output as _campaigns_Campaign__Output } from '../campaigns/Campaign';
import type { HashTags as _companies_HashTags, HashTags__Output as _companies_HashTags__Output } from '../companies/HashTags';
import type { RecentNew as _recentNews_RecentNew, RecentNew__Output as _recentNews_RecentNew__Output } from '../recentNews/RecentNew';
import type { CompanyInvestLocationMapping as _companies_CompanyInvestLocationMapping, CompanyInvestLocationMapping__Output as _companies_CompanyInvestLocationMapping__Output } from '../companies/CompanyInvestLocationMapping';
import type { CompanyNicheIndustryMapping as _companies_CompanyNicheIndustryMapping, CompanyNicheIndustryMapping__Output as _companies_CompanyNicheIndustryMapping__Output } from '../companies/CompanyNicheIndustryMapping';

export interface Company {
  'id'?: (number);
  'createdAt'?: (string);
  'updatedAt'?: (string);
  'createdBy'?: (string);
  'updatedBy'?: (string);
  'state'?: (string);
  'name'?: (string);
  'secondName'?: (string);
  'hashtag'?: (string);
  'type'?: (string);
  'authorizedCapital'?: (number | string);
  'registerDate'?: (string);
  'deregisterDate'?: (string);
  'description'?: (string);
  'taxNumber'?: (string);
  'contactNumber'?: (string);
  'establishmentDecision'?: (string);
  'responsibleAuthority'?: (string);
  'employeeNumber'?: (number);
  'streetAddress'?: (string);
  'wardId'?: (number);
  'districtId'?: (number);
  'headquarterPlaceId'?: (number);
  'managementPlaceId'?: (number);
  'taxPlaceId'?: (number);
  'userId'?: (number);
  'ipoStockId'?: (number);
  'parentId'?: (number);
  'industryId'?: (number);
  'user'?: (_users_User | null);
  'ipoStock'?: (_ipoStocks_IpoStock | null);
  'industries'?: (_companies_CompanyIndustryMapping)[];
  'headquarterPlace'?: (_cities_City | null);
  'managementPlace'?: (_cities_City | null);
  'taxPlace'?: (_cities_City | null);
  'albums'?: (_albums_Album)[];
  'transfers'?: (_transfers_Transfer)[];
  'exits'?: (_exits_Exit)[];
  'fundingRounds'?: (_fundingRounds_FundingRound)[];
  'founders'?: (_companies_CompanyFounderMapping)[];
  'directors'?: (_companies_CompanyDirectorMapping)[];
  'chiefs'?: (_companies_CompanyChiefMapping)[];
  'employees'?: (_experiences_Experience)[];
  'people'?: (_companies_CompanyPeopleMapping)[];
  'investedFundingRounds'?: (_fundingRounds_FundingInvestorMapping)[];
  'services'?: (_services_Service)[];
  'products'?: (_products_Product)[];
  'merges'?: (_merges_Merge)[];
  'soldMergers'?: (_merges_Merge)[];
  'acquisitions'?: (_acquisitions_Acquisition)[];
  'soldAcquisitions'?: (_acquisitions_Acquisition)[];
  'cooperations'?: (_cooperations_Cooperation)[];
  'parent'?: (_companies_Company | null);
  'socials'?: (_socials_Social)[];
  'campaigns'?: (_campaigns_Campaign)[];
  'minRange'?: (number | string);
  'maxRange'?: (number | string);
  'hashtags'?: (_companies_HashTags)[];
  'recentNews'?: (_recentNews_RecentNew)[];
  'investLocations'?: (_companies_CompanyInvestLocationMapping)[];
  'niches'?: (_companies_CompanyNicheIndustryMapping)[];
  '_id'?: "id";
  '_createdAt'?: "createdAt";
  '_updatedAt'?: "updatedAt";
  '_createdBy'?: "createdBy";
  '_updatedBy'?: "updatedBy";
  '_state'?: "state";
  '_name'?: "name";
  '_secondName'?: "secondName";
  '_hashtag'?: "hashtag";
  '_type'?: "type";
  '_authorizedCapital'?: "authorizedCapital";
  '_registerDate'?: "registerDate";
  '_deregisterDate'?: "deregisterDate";
  '_description'?: "description";
  '_taxNumber'?: "taxNumber";
  '_contactNumber'?: "contactNumber";
  '_establishmentDecision'?: "establishmentDecision";
  '_responsibleAuthority'?: "responsibleAuthority";
  '_employeeNumber'?: "employeeNumber";
  '_streetAddress'?: "streetAddress";
  '_wardId'?: "wardId";
  '_districtId'?: "districtId";
  '_headquarterPlaceId'?: "headquarterPlaceId";
  '_managementPlaceId'?: "managementPlaceId";
  '_taxPlaceId'?: "taxPlaceId";
  '_userId'?: "userId";
  '_ipoStockId'?: "ipoStockId";
  '_parentId'?: "parentId";
  '_industryId'?: "industryId";
  '_user'?: "user";
  '_ipoStock'?: "ipoStock";
  '_headquarterPlace'?: "headquarterPlace";
  '_managementPlace'?: "managementPlace";
  '_taxPlace'?: "taxPlace";
  '_parent'?: "parent";
  '_minRange'?: "minRange";
  '_maxRange'?: "maxRange";
}

export interface Company__Output {
  'id'?: (number);
  'createdAt'?: (string);
  'updatedAt'?: (string);
  'createdBy'?: (string);
  'updatedBy'?: (string);
  'state'?: (string);
  'name'?: (string);
  'secondName'?: (string);
  'hashtag'?: (string);
  'type'?: (string);
  'authorizedCapital'?: (number);
  'registerDate'?: (string);
  'deregisterDate'?: (string);
  'description'?: (string);
  'taxNumber'?: (string);
  'contactNumber'?: (string);
  'establishmentDecision'?: (string);
  'responsibleAuthority'?: (string);
  'employeeNumber'?: (number);
  'streetAddress'?: (string);
  'wardId'?: (number);
  'districtId'?: (number);
  'headquarterPlaceId'?: (number);
  'managementPlaceId'?: (number);
  'taxPlaceId'?: (number);
  'userId'?: (number);
  'ipoStockId'?: (number);
  'parentId'?: (number);
  'industryId'?: (number);
  'user'?: (_users_User__Output | null);
  'ipoStock'?: (_ipoStocks_IpoStock__Output | null);
  'industries': (_companies_CompanyIndustryMapping__Output)[];
  'headquarterPlace'?: (_cities_City__Output | null);
  'managementPlace'?: (_cities_City__Output | null);
  'taxPlace'?: (_cities_City__Output | null);
  'albums': (_albums_Album__Output)[];
  'transfers': (_transfers_Transfer__Output)[];
  'exits': (_exits_Exit__Output)[];
  'fundingRounds': (_fundingRounds_FundingRound__Output)[];
  'founders': (_companies_CompanyFounderMapping__Output)[];
  'directors': (_companies_CompanyDirectorMapping__Output)[];
  'chiefs': (_companies_CompanyChiefMapping__Output)[];
  'employees': (_experiences_Experience__Output)[];
  'people': (_companies_CompanyPeopleMapping__Output)[];
  'investedFundingRounds': (_fundingRounds_FundingInvestorMapping__Output)[];
  'services': (_services_Service__Output)[];
  'products': (_products_Product__Output)[];
  'merges': (_merges_Merge__Output)[];
  'soldMergers': (_merges_Merge__Output)[];
  'acquisitions': (_acquisitions_Acquisition__Output)[];
  'soldAcquisitions': (_acquisitions_Acquisition__Output)[];
  'cooperations': (_cooperations_Cooperation__Output)[];
  'parent'?: (_companies_Company__Output | null);
  'socials': (_socials_Social__Output)[];
  'campaigns': (_campaigns_Campaign__Output)[];
  'minRange'?: (number);
  'maxRange'?: (number);
  'hashtags': (_companies_HashTags__Output)[];
  'recentNews': (_recentNews_RecentNew__Output)[];
  'investLocations': (_companies_CompanyInvestLocationMapping__Output)[];
  'niches': (_companies_CompanyNicheIndustryMapping__Output)[];
  '_id': "id";
  '_createdAt': "createdAt";
  '_updatedAt': "updatedAt";
  '_createdBy': "createdBy";
  '_updatedBy': "updatedBy";
  '_state': "state";
  '_name': "name";
  '_secondName': "secondName";
  '_hashtag': "hashtag";
  '_type': "type";
  '_authorizedCapital': "authorizedCapital";
  '_registerDate': "registerDate";
  '_deregisterDate': "deregisterDate";
  '_description': "description";
  '_taxNumber': "taxNumber";
  '_contactNumber': "contactNumber";
  '_establishmentDecision': "establishmentDecision";
  '_responsibleAuthority': "responsibleAuthority";
  '_employeeNumber': "employeeNumber";
  '_streetAddress': "streetAddress";
  '_wardId': "wardId";
  '_districtId': "districtId";
  '_headquarterPlaceId': "headquarterPlaceId";
  '_managementPlaceId': "managementPlaceId";
  '_taxPlaceId': "taxPlaceId";
  '_userId': "userId";
  '_ipoStockId': "ipoStockId";
  '_parentId': "parentId";
  '_industryId': "industryId";
  '_user': "user";
  '_ipoStock': "ipoStock";
  '_headquarterPlace': "headquarterPlace";
  '_managementPlace': "managementPlace";
  '_taxPlace': "taxPlace";
  '_parent': "parent";
  '_minRange': "minRange";
  '_maxRange': "maxRange";
}
